--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 
 <head>
-     <link rel="stylesheet" href="{{url_for('static', filename='borders.css')}}" />
+
+    <link rel="stylesheet" href="{{url_for('static',filename='css/borders.css')}}" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,21 +15,39 @@
 
 
 
-
 <body>
-<video width=100% height=100% controls>
+
+<video autoplay muted loop width=100% height=100% controls id="myVideo">
     <source src="{{url_for('static',filename='mat.mp4')}}" type="video/mp4">
 
     Your browser does not support the video tag.
   </video>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">MyFlaskApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="/Contact">Contact</a></li>
+        </ul>
+    </div>
 
+    <br>
 
-<h1>Select Voice:</h1> <select id='voiceList'></select> <br><br>
+<div class="content">
+<h1>Welcome to text to speech translator!</h1>
+    <br>
+    <h3>Select Voice:</h3>> <select id='voiceList'></select> <br><br>
 
 
     <input id='txtInput'  /> <br><br>
     <button id='btnSpeak'>Speak!</button>
+
+</div>
 
     <script>
 
@@ -69,6 +89,7 @@
             voiceList.selectedIndex = selectedIndex;
         }
     </script>
+<div id="footer"> Copyright © 2020 All Rights Reserved </div>
 </body>
 
 </html>
