--- a/Contact.html
+++ b/Contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <link rel="stylesheet" href="{{url_for('static',filename='css/borders.css')}}" />
+    <link rel="stylesheet" href="borders.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 </head>
 <body>
 <video autoplay muted loop width=100% height=100% controls id="myVideo">
-    <source src="{{url_for('static',filename='mat.mp4')}}" type="video/mp4">
+    <source src="mat.mp4" type="video/mp4">
 
     Your browser does not support the video tag.
   </video>
