--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 <video autoplay muted loop width=100% height=100% controls id="myVideo">
-    <source src="{{url_for('static',filename='mat.mp4')}}" type="video/mp4">
+    <source src="mat.mp4" type="video/mp4">
 
     Your browser does not support the video tag.
   </video>
