--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item active"><a class="nav-link" href="About.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
         </ul>
     </div>
